--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q98WVJ6FL0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-Q98WVJ6FL0');
+  </script>
 </head>
 
 <body>
