fix: ffmpeg include error

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -20,6 +20,9 @@
 
       gtag('config', 'G-Q98WVJ6FL0');
     </script>
+    <link 
+      rel="stylesheet" 
+      href="./src/global.less"/>
   </head>
 
   <body>
